@@ -1,5 +1,7 @@
 <?php
   /**
+   * Complete version
+   * 
    * @version $Id$
    * @author Matthew McNaney <mcnaney at gmail dot com>
    */
