@@ -4,19 +4,20 @@
    * @version $Id$
    */
 
+include 'core/conf/version.php';
 
-$content[] = '<b>Welcome to the phpWebSite 1.0.0</b><br />
-<p>1.0.0 is an upgrade to the phpWebSite version 0.x software.
+$content[] = "<b>Welcome to the phpWebSite $version</b><br />
+<p>The 1.x series is an upgrade to the phpWebSite version 0.x software.
 It has been redesigned and coded from the ground up.</p>
 
 <p>We have added MANY new features to phpWebSite to benefit users and developers alike.<br />
 We are hoping to receive bug reports from those interested in the software.<br />Please report any problems to Sourceforge:<br />
-<a href="https://sourceforge.net/projects/phpwebsite" target="_blank">https://sourceforge.net/projects/phpwebsite</a>
+<a href=\"https://sourceforge.net/projects/phpwebsite\" target=\"_blank\">https://sourceforge.net/projects/phpwebsite</a>
 </p>
 
-<p>If you have any questions, you may want to look through the <a href="../docs/">documentation directory</a>.</p>
+<p>If you have any questions, you may want to look through the <a href=\"../docs/\">documentation directory</a>.</p>
 <p>If you have questions about its functioning and API, please visit '
 . 'us at irc: freenode.net #phpwebsite </p>
-';
+";
 
 ?>
